--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,24 @@
 version: "3.7"
 
 services:
+  ui:
+    build: ./client
+    ports:
+      - "3000:3000"
+    depends_on:
+      - web-server
+    volumes: 
+      - ./client/src/:/usr/src/app/src
   web-server:
     build: ./api
     container_name: adway-api
     volumes:
       - ./api/src:/usr/src/app/src
       - ./api/nodemon.json:/usr/src/app/nodemon.json
-    expose:
-      - "8080"
     ports:
       - "8080:8080"
     depends_on:
       - mongo
-    command: npm start
   mongo:
     image: mongo
     ports:
